--- a/cafe-aroma/index.html
+++ b/cafe-aroma/index.html
@@ -102,12 +102,13 @@
         <div class="direccion">
             <p>📍 Álvaro Obregón 86, Roma Norte, CDMX</p>
             <p>🕒 Abierto de 8:00 AM a 10:00 PM</p>
+            <p>Numero de contacto para dudas o reservciones (5515306826)</p>
         </div>
     </section>
 
   
     <footer>
-        <p>© 2025 Café Aroma | contacto@cafearoma.com</p>
+        <p>© 2025 Café Aroma | cafearoma@gmail.com</p>
     </footer>
 </body>
 </html>
