--- a/cafe-aroma/index.html
+++ b/cafe-aroma/index.html
@@ -100,9 +100,10 @@
             width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div class="direccion">
-            <p>📍 Álvaro Obregón 86, Roma Norte, CDMX</p>
-            <p>🕒 Abierto de 8:00 AM a 10:00 PM</p>
-            <p>Numero de contacto para dudas o reservciones (5515306826)</p>
+            <p> Álvaro Obregón 86, Roma Norte, CDMX</p>
+            <p> Abierto de 8:00 AM a 10:00 PM</p>
+            <p>Numero de contacto para dudas o reservaciones (5515306826)</p>
+            <p>"https://facebook.com/cafearoma"</p>
         </div>
     </section>
 
